<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.foodcategories.FoodCategoriesFragment">

    <ImageButton
        android:id="@+id/dairyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dairy"
        app:layout_constraintBottom_toTopOf="@+id/fruitButton"
        app:layout_constraintEnd_toStartOf="@+id/grainsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dairy" />

    <ImageButton
        android:id="@+id/fruitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fruit"
        app:layout_constraintBottom_toTopOf="@+id/junkFoodButton"
        app:layout_constraintEnd_toStartOf="@+id/vegetableButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairyButton"
        android:contentDescription="@string/fruit" />

    <ImageButton
        android:id="@+id/grainsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/grains"
        app:layout_constraintBottom_toTopOf="@+id/vegetableButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dairyButton"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/grains" />

    <ImageButton
        android:id="@+id/meatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/meat"
        app:layout_constraintBottom_toTopOf="@+id/otherFoodButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/junkFoodButton"
        app:layout_constraintTop_toBottomOf="@+id/vegetableButton"
        android:contentDescription="@string/meat" />

    <ImageButton
        android:id="@+id/vegetableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vegetables"
        app:layout_constraintBottom_toTopOf="@+id/meatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fruitButton"
        app:layout_constraintTop_toBottomOf="@+id/grainsButton"
        android:contentDescription="@string/vegetables" />

    <ImageButton
        android:id="@+id/junkFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/junkfood"
        app:layout_constraintBottom_toTopOf="@+id/otherFoodButton"
        app:layout_constraintEnd_toStartOf="@+id/meatButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruitButton"
        android:contentDescription="@string/junk_food" />

    <Button
        android:id="@+id/otherFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meatButton" />

</androidx.constraintlayout.widget.ConstraintLayout>